--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
             </div>
         </div>
 
+        <svg class="defs-only">
+            <filter id="duotone" color-interpolation-filters="sRGB"
+                    x="0" y="0" height="100%" width="100%">
+                <feColorMatrix type="matrix"
+                               values="0.90 0 0 0   0.40
+                                       0.95 0 0 0  -0.10
+                                       -0.20 0 0 0   0.65
+                                       0  0 0 1   0" />
+            </filter>
+        </svg>
+
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
