finishing the amaro filter, looks sketchy thou

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <figure class="filter filter--amaro">
                     <img src="img/test-img-road--small.jpg" alt="">
-                    <figcaption>Filter</figcaption>
+                    <figcaption>Amaro?</figcaption>
                 </figure>
 
                 <figure class="filter filter--black-white">
