added Hudson filter

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                <figure>
                    <img src="img/test-img-road--small.jpg" alt="" class="img--original">
                </figure>
+
+                <figure>
+                    <img src="img/test-img-scenery--small.jpg" alt="" class="img--original">
+                </figure>
             </div>
 
             <hr class="gradient-center">
@@ -53,17 +57,17 @@
                 </figure>
 
                 <figure class="filter filter--hudson">
-                    <img src="img/test-img-building--small.jpg" alt="">
+                    <img src="img/test-img-scenery--small.jpg" alt="">
                     <figcaption>Hudson</figcaption>
                 </figure>
 
                 <figure class="filter filter--brooklyn">
-                    <img src="img/test-img-building--small.jpg" alt="">
+                    <img src="img/test-img-scenery--small.jpg" alt="">
                     <figcaption>Brooklyn</figcaption>
                 </figure>
 
                 <figure class="filter filter--reyes">
-                    <img src="img/test-img-building--small.jpg" alt="">
+                    <img src="img/test-img-scenery--small.jpg" alt="">
                     <figcaption>Reyes</figcaption>
                 </figure>
             </div>
