--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <figcaption>Hudson</figcaption>
                 </figure>
 
-                <figure class="filter filter--brooklyn">
+                <figure class="filter filter--1977">
                     <img src="img/test-img-scenery--small.jpg" alt="">
-                    <figcaption>Brooklyn</figcaption>
+                    <figcaption>1977?</figcaption>
                 </figure>
 
                 <figure class="filter filter--reyes">
