--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <figure>
                     <img src="img/test-img-scenery--small.jpg" alt="" class="img--original">
                 </figure>
+
+                <figure>
+                    <img src="http://i.imgur.com/3MLKn9w.jpg" alt="" class="img--original">
+                </figure>
             </div>
 
             <hr class="gradient-center">
@@ -69,6 +73,21 @@
                 <figure class="filter filter--reyes">
                     <img src="img/test-img-scenery--small.jpg" alt="">
                     <figcaption>Reyes</figcaption>
+                </figure>
+
+                <figure class="filter filter--valencia">
+                    <img src="http://i.imgur.com/3MLKn9w.jpg" alt="">
+                    <figcaption>Valencia</figcaption>
+                </figure>
+
+                <figure class="filter filter--xproii">
+                    <img src="http://i.imgur.com/3MLKn9w.jpg" alt="">
+                    <figcaption>X Pro II</figcaption>
+                </figure>
+
+                <figure class="filter filter--rise">
+                    <img src="http://i.imgur.com/3MLKn9w.jpg" alt="">
+                    <figcaption>Rise</figcaption>
                 </figure>
             </div>
         </div>
