added Sutro filter

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
                 </figure>
 
                 <figure class="filter filter--toaster">
-                    <img src="http://kindalikeabigdeal.com/filterfakers/images/01_normal.jpg" alt="">
+                    <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
                     <figcaption>Toaster</figcaption>
                 </figure>
 
                 <figure class="filter filter--mayfair">
-                    <img src="http://kindalikeabigdeal.com/filterfakers/images/01_normal.jpg" alt="">
+                    <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
                     <figcaption>Mayfair</figcaption>
                 </figure>
 
                 <figure class="filter filter--sierra">
-                    <img src="http://kindalikeabigdeal.com/filterfakers/images/01_normal.jpg" alt="">
+                    <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
                     <figcaption>Sierra</figcaption>
                 </figure>
 
@@ -103,6 +103,21 @@
                 <figure class="filter filter--rise">
                     <img src="http://i.imgur.com/3MLKn9w.jpg" alt="">
                     <figcaption>Rise</figcaption>
+                </figure>
+
+                <figure class="filter filter--sutro">
+                    <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
+                    <figcaption>Sutro</figcaption>
+                </figure>
+
+                <figure class="filter filter--kelvin">
+                    <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
+                    <figcaption>Kelvin</figcaption>
+                </figure>
+
+                <figure class="filter filter--hefe">
+                    <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
+                    <figcaption>Hefe</figcaption>
                 </figure>
             </div>
         </div>
