added Slumber filter

--- a/index.html
+++ b/index.html
@@ -119,6 +119,21 @@
                     <img src="http://i.imgur.com/KQ0U5BL.jpg" alt="">
                     <figcaption>Hefe</figcaption>
                 </figure>
+
+                <figure class="filter filter--brannan">
+                    <img src="http://i.imgur.com/wQvXmoI.jpg" alt="">
+                    <figcaption>Brannan</figcaption>
+                </figure>
+
+                <figure class="filter filter--crema">
+                    <img src="http://i.imgur.com/wQvXmoI.jpg" alt="">
+                    <figcaption>Crema</figcaption>
+                </figure>
+
+                <figure class="filter filter--slumber">
+                    <img src="http://i.imgur.com/wQvXmoI.jpg" alt="">
+                    <figcaption>Slumber</figcaption>
+                </figure>
             </div>
         </div>
 
