added Brannan filter but not so satisfied

--- a/index.html
+++ b/index.html
@@ -121,12 +121,16 @@
                 </figure>
 
                 <figure class="filter filter--brannan">
-                    <img src="http://i.imgur.com/wQvXmoI.jpg" alt="">
+                    <img src="http://i.imgur.com/XmN7sfo.jpg" alt="">
                     <figcaption>Brannan</figcaption>
                 </figure>
 
+                <!-- http://i.imgur.com/oQE0got.jpg bike -->
+                <!-- http://i.imgur.com/XmN7sfo.jpg flower -->
+                <!-- http://i.imgur.com/eYoFDuJ.jpg person -->
+
                 <figure class="filter filter--crema">
-                    <img src="http://i.imgur.com/wQvXmoI.jpg" alt="">
+                    <img src="http://i.imgur.com/eYoFDuJ.jpg" alt="">
                     <figcaption>Crema</figcaption>
                 </figure>
 
