modify Amaro filter to match more with other types of images

--- a/index.html
+++ b/index.html
@@ -51,7 +51,22 @@
                 </figure>
 
                 <figure class="filter filter--amaro">
-                    <img src="img/test-img-road--small.jpg" alt="">
+                    <img src="http://i.imgur.com/eYoFDuJ.jpg" alt="">
+                    <figcaption>Amaro?</figcaption>
+                </figure>
+
+                <figure class="filter filter--amaro">
+                    <img src="http://i.imgur.com/oQE0got.jpg" alt="bike">
+                    <figcaption>Amaro?</figcaption>
+                </figure>
+
+                <figure class="filter filter--amaro">
+                    <img src="http://i.imgur.com/XmN7sfo.jpg" alt="flower">
+                    <figcaption>Amaro?</figcaption>
+                </figure>
+
+                <figure class="filter filter--amaro">
+                    <img src="http://i.imgur.com/wQvXmoI.jpg" alt="city">
                     <figcaption>Amaro?</figcaption>
                 </figure>
 
@@ -128,6 +143,7 @@
                 <!-- http://i.imgur.com/oQE0got.jpg bike -->
                 <!-- http://i.imgur.com/XmN7sfo.jpg flower -->
                 <!-- http://i.imgur.com/eYoFDuJ.jpg person -->
+                <!-- http://i.imgur.com/wQvXmoI.jpg city -->
 
                 <figure class="filter filter--crema">
                     <img src="http://i.imgur.com/eYoFDuJ.jpg" alt="">
